Sistema de autenticação finalizado. Divide o controller da API em 4 controllers: Create, Read, Update e Delete. Adiciona cadastro de Cargo e Departamento. Adiciona cadastro de imagem. Adiciona exportação de contato via qrcode. Unifica a listagem de contatos com a listagem de funcionários. Redesign das listagens. Iniciado o redesign dos Cadastros e da Dashboard

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -10,8 +10,9 @@
     "/js/navbar.js": "/js/navbar.js",
     "/js/dashboard.js": "/js/dashboard.js",
     "/js/list.js": "/js/list.js",
-    "/js/contact.js": "/js/contact.js",
     "/js/job.js": "/js/job.js",
+    "/js/qrcode.js": "/js/qrcode.js",
+    "/js/cropper.js": "/js/cropper.js",
     "/css/app.css": "/css/app.css",
     "/js/bootstrap.bundle.min.js": "/js/bootstrap.bundle.min.js",
     "/css/bootstrap.min.css": "/css/bootstrap.min.css",
