--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
-        "axios": "^1.1.2",
-        "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
-        "vue": "^2.7.14",
         "vue-loader": "^15.10.1",
         "vue-template-compiler": "^2.7.14"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.3.0"
+        "@fortawesome/fontawesome-free": "^6.3.0",
+        "@popperjs/core": "^2.10.2",
+        "axios": "^1.1.2",
+        "bootstrap": "^5.1.3",
+        "plotly.js-basic-dist-min": "^2.20.0",
+        "qrcode.vue": "^1.7.0",
+        "v-money": "^0.8.1",
+        "vue": "^2.7.14",
+        "vue-cropper": "^0.5.11",
+        "vue-the-mask": "^0.11.1"
     }
 }
